fixed overflow of user-name and user-about

--- a/blocks/profile/__user-about/profile__user-about.css
+++ b/blocks/profile/__user-about/profile__user-about.css
@@ -4,6 +4,10 @@
     line-height: 22px;
     margin: 0;
     grid-column: 1/2;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 336px;
 }
 
 @media (max-width: 767px) {
