--- a/blocks/profile/__user-name/profile__user-name.css
+++ b/blocks/profile/__user-name/profile__user-name.css
@@ -4,6 +4,10 @@
     line-height: 48px;
     margin: 0 0 7px 0;
     grid-column: 1 / 2;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 294px;
 }
 
 @media (max-width: 767px) {
@@ -12,5 +16,6 @@
         text-align: center;
         font-size: 27px;
         line-height: 33px;
+        max-width: 190px;
     }
 }
